<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgViewAvatar"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@mipmap/anhdaidien"
                android:padding="5dp" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">
            <TextView
                android:id="@+id/txtViewUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewUsername"
                android:textColor="@color/textColor"></TextView>
            <TextView
                android:id="@+id/txtViewUserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtViewUserId"
                android:textColor="@color/textColor"></TextView>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/btnYourGroup"
            android:background="@drawable/button_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/btnYourGroup"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btnManageGroup"
            android:background="@drawable/button_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/btnManageGroup"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btnSetting"
            android:background="@drawable/button_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/btnSetting"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btnLogOut"
            android:background="@drawable/button_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/btnLogOut"
            android:textAllCaps="false"/>

    </LinearLayout>
</LinearLayout>