<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient_main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:background="@drawable/custom_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewChangePass"
            android:padding="20dp"
            android:layout_margin="3dp"
            android:textColor="@color/textColor"/>

        <!--      edit text  nhập mật khẩu cũ-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/edtOldPass"
                style="@style/EditTextPassword"
                android:background="@drawable/custom_edittext"
                android:hint="@string/edtOldPass"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        edit text nhập mật khẩu mới-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNewPass"
                style="@style/EditTextPassword"
                android:hint="@string/edtNewPass"
                android:inputType="textPassword"
                android:background="@drawable/custom_edittext" />
        </com.google.android.material.textfield.TextInputLayout>

            <!--        edit text nhập lại mật khẩu mới-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNewPassAgain"
                style="@style/EditTextPassword"
                android:hint="@string/edtNewPassAgain"
                android:inputType="textPassword"
                android:background="@drawable/custom_edittext" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        nút button xác nhận  -->
        <Button
            android:id="@+id/btnConfirmPassword"
            android:background="@drawable/button_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnConfirm" />
    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:background="@drawable/custom_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtViewChangeName"
            android:padding="20dp"
            android:layout_margin="5dp"
            android:textColor="@color/textColor"/>

        <!--        edt nhập tên cũ-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtOldName"
                style="@style/EditTextPassword"
                android:hint="@string/edtOldName"
                android:background="@drawable/custom_edittext" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--        edt nhập tên mới-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNewName"
                style="@style/EditTextPassword"
                android:hint="@string/edtNewName"
                android:background="@drawable/custom_edittext" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnConfirmUsername"
            android:background="@drawable/button_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnConfirm"/>
    </LinearLayout>
</LinearLayout>