<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".CreateGroupActivity">

    //group name

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/createGroupName"
            android:textColor="@color/textColor"
            android:textSize="60px"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edtGroupName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/my_border"
            android:gravity="top"
            android:hint="@string/hintCreateGroupName"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:alpha="0.5"/>

    </LinearLayout>

    //cover

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingTop="50px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtAvataGroup"
                android:textColor="@color/textColor"
                android:textSize="60px"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/txtAvataGroupNote"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="10dp"
            android:layout_weight="8">
        <EditText
            android:id="@+id/edtGroupInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/my_border"
            android:gravity="top"
            android:hint="Thông tin nhóm"
            android:padding="10dp"
            android:alpha="0.5"/>
        </LinearLayout>

    </LinearLayout>

    //button

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <Button
            android:id="@+id/btnCreateGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCreateGroup"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textAllCaps="false"
            android:background="@drawable/button_effect"/>

    </LinearLayout>


</LinearLayout>